<resources>
    <string name="app_name">Great Day To Do List</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_walkthough">WalkthoughActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="walkthrough_title">Plan your Day in Details</string>
    <string name="walkthrough_desc">There are many variations of passages. There are many variations.</string>
    <string name="button_next">Next</string>
    <string name="illustration">Illustration</string>
    <string name="task_list">Task List</string>
    <string name="completed">Completed</string>
    <string name="add">Add</string>
    <string name="categories">Categories</string>
    <string name="task_name">Task Name</string>
    <string name="category_icon">Category Icon</string>
    <string name="select_all_task">Select All Task</string>
    <string name="add_task">Add Task</string>
    <string name="name">Name</string>
    <string name="category_name">Category Name</string>
    <string name="choose_icon">Choose Icon</string>
    <string name="submit">Submit</string>
    <string name="add_category">Add Category</string>
    <string name="ends">Ends</string>
    <string name="start">Start</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="back">Back</string>
    <string name="amount_of_tasks">Amount of tasks</string>

    <string-array name="data_category">
        <item>image</item>
        <item>heart</item>
        <item>user</item>
        <item>plus</item>
        <item>arrow_right</item>
        <item>work</item>
    </string-array>

    <string-array name="data_icon">
        <item>@drawable/ic_image</item>
        <item>@drawable/ic_heart</item>
        <item>@drawable/ic_user</item>
        <item>@drawable/ic_plus</item>
        <item>@drawable/ic_arrow_right</item>
        <item>@drawable/ic_work</item>
    </string-array>
</resources>