<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.category.AddCategoryFragment">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:textSize="14sp"
        android:textColor="@color/md_light_blue_A800"
        android:layout_marginBottom="4dp"
        android:text="@string/name" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginBottom="32dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCategoryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:hint="@string/category_name"
            android:importantForAutofill="no"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:textSize="14sp"
        android:textColor="@color/md_light_blue_A800"
        android:layout_marginBottom="8dp"
        android:text="@string/choose_icon" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/gridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/buttonSubmitAddCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_segmented"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="15sp"/>
    </LinearLayout>
</LinearLayout>