<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/custom_radiobutton" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="99"
                android:text="@string/categories"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonAddCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_segmented"
                android:gravity="center"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:scrollbars="none">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_category"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:baselineAligned="false"/>
        </HorizontalScrollView>

        <com.google.android.material.card.MaterialCardView
            style="@style/CustomCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="5dp"
            app:cardBackgroundColor="#FAFAFA"
            app:contentPaddingBottom="24dp"
            app:contentPaddingLeft="16dp"
            app:contentPaddingRight="16dp"
            app:contentPaddingTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_category_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="99"
                        android:text="@string/task_list"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/buttonAddTask"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_segmented"
                        android:gravity="center"
                        android:text="@string/add_task"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

                </LinearLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="24dp"
                    android:background="?android:attr/listDivider" />

                <ScrollView
                    android:id="@+id/scrollView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fillViewport="true">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_task"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"/>
                </ScrollView>

                <Button
                    android:id="@+id/buttonSelectAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_segmented"
                    android:text="@string/select_all_task"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>