<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.task.AddTaskFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/start"
                        android:textColor="@color/md_light_blue_A800"
                        android:textSize="14sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginBottom="32dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextDate"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_calendar"
                            android:gravity="center"
                            android:fontFamily="@font/poppins"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:ems="10"
                            android:hint="@string/date"
                            android:clickable="true"
                            android:focusable="true"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/ends"
                        android:textColor="@color/md_light_blue_A800"
                        android:textSize="14sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginBottom="32dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextDate2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableStart="@drawable/ic_calendar"
                            android:gravity="center"
                            android:fontFamily="@font/poppins"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:ems="10"
                            android:hint="@string/date"
                            android:clickable="true"
                            android:focusable="true"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/poppins"
                android:text="@string/title"
                android:textColor="@color/md_light_blue_A800"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/title"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/poppins"
                android:text="@string/category"
                android:textColor="@color/md_light_blue_A800"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp">
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/editTextCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:padding="16dp"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/category"
                    android:importantForAutofill="no"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/poppins"
                android:text="@string/description"
                android:textColor="@color/md_light_blue_A800"
                android:textSize="14sp" />
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="32dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/description"
                    android:overScrollMode="always"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:lines="6"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:windowSoftInputMode="adjustPan" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/buttonSubmitAddTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_segmented"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="15sp"/>
    </LinearLayout>
</LinearLayout>